--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projekt</title>
+    <link rel="stylesheet" href="css/main.scss">
 </head>
 <body>
-    <h1>Hälsa MashUp</h1>
+    <!-- Sidhuvud -->
+    <header>
+        <h1>Hälsa MashUp</h1>
+    </header>
+    
+    <!-- Huvudinnehållet -->
+    <main>
+        <p>
+            I denna sida kan du mata in dina aktuella mått längd/vikt i cm/kg för att analysering ditt BMI-resultat för att ta reda på om det finns.
+        </p>
+        <fieldset>
+            <legend>Fyll i formuläret</legend>
+            <form action="">
+            <label for="length">Längd:</label>
+            <input type="text" id="length" placeholder="Ange längd i cm">
+            <br>
+            <label for="weight">Vikt:</label>
+            <input type="text" id="weight" placeholder="Ange vikt i kg">
+            <br>
+            <label for="age">Ålder:</label>
+            <input type="text" id="age">
+            <br>
+            <label for="sex">Kön:</label>
+            <label for="male">Man</label>
+            <input type="radio" id="male" name="sex">
+            <label for="female">Kvinna</label>
+            <input type="radio" name="sex" id="female">
+            <br>
+            <button id="btn">Tryck här</button>
+            </form>
+        </fieldset>
+        <section>
+            <h2>Resultat</h2>
+            <div id="results"></div>
+        </section>
+    </main>
+
+    <!-- Sidfot -->
+    <footer>
+        <p>
+            Laborationsuppgift för kursen DT211G, Frontend-baserad webbutveckling.
+        </p>
+        <p>
+            &copy; Copyright Tommy Issa, 2025.
+        </p>
+    </footer>
 </body>
 </html>
