--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,15 @@
             <legend>Fyll i formuläret</legend>
             <form action="">
                 <label for="length">Längd:</label>
-                <input type="text" id="length" placeholder="Ange längd i cm">
+                <input type="text" id="length" placeholder="Ange längd i cm"><span id="length-error"></span>
                 
                 <br>
                 <label for="weight">Vikt:</label>
-                <input type="text" id="weight" placeholder="Ange vikt i kg">
+                <input type="text" id="weight" placeholder="Ange vikt i kg"><span id="weight-error"></span>
 
                 <br>
                 <label for="age">Ålder:</label>
-                <input type="text" id="age">
+                <input type="text" id="age"><span id="age-error"></span>
 
                 <br>
                 <label for="sex">Kön:</label>
@@ -38,7 +38,8 @@
                 <input type="radio" id="male" name="sex">
                 <label for="female">Kvinna</label>
                 <input type="radio" name="sex" id="female">
-                
+                <span id="sex-error"></span>
+
                 <br>
                 <button id="btn">Tryck här</button>
             </form>
