--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <!-- Huvudinnehållet -->
     <main>
         <p>
-            I denna sida kan du mata in dina aktuella mått längd/vikt i cm/kg för att analysering ditt BMI-resultat för att ta reda på om det finns.
+            I denna sida kan du mata in dina aktuella mått längd i cm, vikt i kg för att analysera ditt BMI-resultat för att ta reda på risknivå, rekommendation gällande dagligt kaloribehov, näringsinnehåll, vitaminer samt mineraler.
         </p>
         <fieldset>
             <legend>Fyll i formuläret</legend>
